# Forex-Forecasting-MLOps-System

./: .env.example  .gitignore  EDA.ipynb  README.md  data_ingestion.ipynb  data_transformation.ipynb  docker-compose.yaml  eur_usd_forex_data.csv  forex_sample_data.csv  initial_model_registration.ipynb  main.py  manual_data_input.py  model_comparison.ipynb  model_prediction.ipynb  model_training.ipynb  pyproject.toml  requirements.txt  train_sample.csv
airflow/: Dockerfile  requirements.txt
airflow/dags/: forex_etl.py  prediction_pipeline.py  training_pipeline.py  tutorial.py
airflow/dags/src/: data_ingestion.py  data_preprocessing.py  data_transformation.py  model_factory.py  model_promotion.py  model_tuning.py  orchestrator.py  utility.py
config/: airflow.cfg
dags/: forex_etl.py  prediction_pipeline.py  taskflow_api_tuts.py
docker/: docker-compose.airflow.yaml  docker-compose.model.yaml
model_service/: forex_model.pkl  main.py  requirements.txt  utils.py
src/: data_ingestion.py  data_transformation.py  model_factory.py  model_promotion.py  model_tuning.py  orchestrator.py  utility.py
streamlit/: Dockerfile  app.py  requirements.txt
