[project]
name = "forex-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow-task-sdk>=1.1.5",
    "fastapi>=0.117.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.1",
    "numpy>=2.3.5",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "schedule>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.45",
    "statsmodels>=0.14.6",
    "streamlit>=1.53.0",
    "twelvedata>=1.2.25",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.3",
]
